# mcp-google-ads

./: .env.example  .gitignore  LICENSE  README.md  format_customer_id_test.py  google_ads_server.py  pyproject.toml  requirements.txt  test_google_ads_mcp.py  test_token_refresh.py
.cursor/rules/: fastmcp.mdc
auth/: __init__.py  auth_info_middleware.py  credential_store.py  google_oauth_provider.py  google_remote_auth_provider.py  mcp_session_middleware.py  oauth21_session_store.py  oauth_common_handlers.py  oauth_config.py  oauth_error_handling.py  scopes.py
docs/: fastmcp.md  gaql-google-ads-query-language.md  great-gaql-samples.md
